Imported from https://IMMANUEL44@github.com/IMMANUEL44/mirror-bot-workflow.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = The Engine for my clone aka mirror bot . This is a clone of work done by @ElytrA8 and not mine all credits and thanks to him
+[access "refs/*"]
+	owner = group user/Immanuel Raj (IMMANUEL44)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Immanuel Raj (IMMANUEL44)
+	label-Verified = -1..+1 group user/Immanuel Raj (IMMANUEL44)
+	push = group user/Immanuel Raj (IMMANUEL44)
+	read = group user/Immanuel Raj (IMMANUEL44)
+	rebase = group user/Immanuel Raj (IMMANUEL44)
+	removeReviewer = group user/Immanuel Raj (IMMANUEL44)
+	submit = group user/Immanuel Raj (IMMANUEL44)
+[access "refs/heads/*"]
+	create = group user/Immanuel Raj (IMMANUEL44)
+	push = +force group user/Immanuel Raj (IMMANUEL44)
+	pushMerge = group user/Immanuel Raj (IMMANUEL44)
+	read = group user/Immanuel Raj (IMMANUEL44)
+[access "refs/tags/*"]
+	push = group user/Immanuel Raj (IMMANUEL44)
+	push = +force group user/Immanuel Raj (IMMANUEL44)
