--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -8,11 +8,11 @@ on:
    
 env:
   # Change these values if you have forked it for your own works
-  GitHubMail: "manofuranium@gmail.com"
-  GitHubName: "ElytrA8" 
+  GitHubMail: ${{ secrets.GitHubMail }}
+  GitHubName: ${{ secrets.GitHubName }}
 
 jobs:
-  build:
+  debug:
     runs-on: ubuntu-20.04
 
     steps:
@@ -36,6 +36,7 @@ jobs:
       - name: Compile The Mirroring Docker Container
         run: |
           cd source || exit 1
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker container prune --force || true
           docker build . --rm --force-rm --compress --no-cache=true --pull --file Dockerfile -t mirror-bot
           docker image ls
