--- a/.github/workflows/userge.yml
+++ b/.github/workflows/userge.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cd source
           pip3 install --no-warn-script-location -r requirements.txt
-          bash install.sh --no-web
+          docker build . -t userge && docker run -d --restart on-failure --name userge_1 userge
 
       - name: Loop Workflow
         continue-on-error: true
