Workflow: Use Upper case
Secrets only store variables in upper case

--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
    
 env:
-  GitHubMail: ${{ secrets.GitHubMail }}
-  GitHubName: ${{ secrets.GitHubName }}
+  GitHubMail: ${{ secrets.GITHUBMAIL }}
+  GitHubName: ${{ secrets.GITHUBNAME }}
 
 jobs:
   debug:
