--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -2,7 +2,7 @@ name: UserBot Environment
 
 on:
   push:
-    branches: [ main ]
+    branches: [ userbot ]
     paths-ignore: 'README.md'
   workflow_dispatch:
    
@@ -47,4 +47,4 @@ jobs:
           echo $(( RANDOM - ( RANDOM % RANDOM ) )) > looper.txt
           git add looper.txt
           git commit -m "Workflow : Loop at $(date -u +%D-%T%P)"
-          git push -q ${GITHUB_REPOSITORY} HEAD:main
+          git push -q ${GITHUB_REPOSITORY} HEAD:userbot
