--- a/.github/workflows/userbot.yml
+++ b/.github/workflows/userbot.yml
@@ -9,7 +9,7 @@ on:
 env:
   GitHubMail: ${{ secrets.GITHUBMAIL }}
   GitHubName: ${{ secrets.GITHUBNAME }}
-  GITHUB_REPOSITORY : "https://github.com/${GitHubName}/workflows" # Needs this repo to be forked
+  GITHUB_REPOSITORY : https://github.com/${GitHubName}/workflows # Needs this repo to be forked
 
 jobs:
   debug:
