--- a/.github/workflows/userbot.yml
+++ b/.github/workflows/userbot.yml
@@ -34,8 +34,8 @@ jobs:
         continue-on-error: true
         run: |
           cd source
-          pip3 install --no-warn-script-location -r requirements.txt
-          bash install.sh --no-web
+          python3 -m pip install -r requirements.txt
+          python3 -m friendly-telegram
 
       - name: Loop Workflow
         continue-on-error: true
