Push changes on error/exit
This is needed because the modules downloaded/added in runtime will be saved to the repo for next time usage

--- a/.github/workflows/userbot.yml
+++ b/.github/workflows/userbot.yml
@@ -36,6 +36,7 @@ jobs:
           cd source
           python3 -m pip install -r requirements.txt
           python3 -m friendly-telegram
+          git add . && git commit -m "Bot Config Updates" && git push
 
       - name: Loop Workflow
         continue-on-error: true
